duck/test/fail/spec_only.duck
main = exit 0

f :: Int -> Int
